--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ h1 {
 
 h2 {
     text-align: center;
+    font-size: 30px;
+}
+
+h3 {
+    text-align: center;
+    font-size: 20px;
+
 }
 
 .group {
@@ -49,10 +56,74 @@ h2 {
 }
 
 .border {
-    border: 2px solid lightgray;
+    border: 2px solid#AC73BF;
     margin: 10px;
+    border-radius: 15px;
 }
 
+div label {
+    margin: 20px;
+}
+
+button {
+    margin-left: 20px;
+}
+
+div#form item {
+    padding: 0;
+    margin: 0;
+}
+
+input {
+    margin-left: 16px;
+}
+
+
+
+.center {
+    padding-top: 30px;
+    margin-left: 45%;
+    margin-bottom: 20px;
+    color: #552D62;
+}
+
+.bullet {
+    color: #552D62;
+
+}
+
+img {
+    border-radius: 10px;
+}
+
+
+/* .center {
+    margin: auto;
+    text-align: center;
+    align-content: center;
+} */
+
+/* div#github {
+    border-left: border: 2px solid lightgray;
+
+}
+
+div#linkedin {
+    border-right: none;
+    border-top: none;
+    border-bottom: none;
+} */
+
+
+/* form {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+form div {
+    padding-left: 75px;
+    padding-right: 75px;
+} */
 
 /* Media query for desktop CSS declarations */
 
@@ -68,6 +139,18 @@ h2 {
         padding-left: 100px;
     }
 
+    .border-side {
+        border-left: 2px solid#D7D6D6;
+        margin-left: 30px;
 
+    }
 
 }
+
+/* form {
+    border: 2px lightgray solid;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+} */
