--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 /* CSS Declarations for mobile-first view */
-body {
+main {
     margin: 20px;
+}
+
+.header {
+    background-image: url(https://images.unsplash.com/photo-1544256718-3bcf237f3974?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80
+);
+    object-fit: cover;
+    margin: 0px;
+
+
+}
+
+.about {
+    margin-top: 50px;
 }
 
 img {
@@ -19,18 +32,28 @@ section {
 
 h1 {
     text-align: center;
+    color: white;
+    font-size: 30px;
+    font-family: Helvetica, sans-serif;
 }
 
 h2 {
     text-align: center;
     font-size: 30px;
+    font-family: Helvetica, sans-serif;
 }
 
 h3 {
     text-align: center;
     font-size: 20px;
+    font-family: Helvetica, sans-serif;
 
 }
+
+p {
+    font-family: Helvetica, sans-serif;
+}
+
 
 .group {
     display: flex;
@@ -98,31 +121,31 @@ img {
 
 
 /* .center {
-    margin: auto;
-    text-align: center;
-    align-content: center;
+margin: auto;
+text-align: center;
+align-content: center;
 } */
 
 /* div#github {
-    border-left: border: 2px solid lightgray;
+border-left: border: 2px solid lightgray;
 
 }
 
 div#linkedin {
-    border-right: none;
-    border-top: none;
-    border-bottom: none;
+border-right: none;
+border-top: none;
+border-bottom: none;
 } */
 
 
 /* form {
-    padding-top: 50px;
-    padding-bottom: 50px;
+padding-top: 50px;
+padding-bottom: 50px;
 }
 
 form div {
-    padding-left: 75px;
-    padding-right: 75px;
+padding-left: 75px;
+padding-right: 75px;
 } */
 
 /* Media query for desktop CSS declarations */
