--- a/style.css
+++ b/style.css
@@ -1,179 +1,217 @@
-/* CSS Declarations for mobile-first view */
+/* Mobiel first CSS declarations */
 main {
-    margin: 20px;
+  margin: 20px;
 }
 
 .header {
-    background-image: url(https://images.unsplash.com/photo-1544256718-3bcf237f3974?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80
-);
-    object-fit: cover;
-    margin: 0px;
+  background-image: url(https://images.unsplash.com/photo-1544256718-3bcf237f3974?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80);
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  padding-top: 125px;
+}
 
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 90px;
+  margin-bottom: 0;
+}
 
+nav ul li {
+  font-size: 16px;
+  font-family: "Raleway", sans-serif;
+  display: inline-flex;
+  padding-right: 11px;
+}
+
+ul {
+  display: table;
+  margin: 0 auto;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.thinkful {
+  color: #ac73bf;
+  text-decoration: none;
 }
 
 .about {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 div {
-    padding: 20px;
+  padding: 20px;
 }
 
 section {
-    padding-bottom: 10px;
-    padding-right: 5px;
-    padding-left: 5px;
+  padding-bottom: 10px;
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
 h1 {
-    text-align: center;
-    color: white;
-    font-size: 30px;
-    font-family: Helvetica, sans-serif;
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  font-family: "Oswald", sans-serif;
+  /* padding-top: 50px;
+  margin: 5px; */
 }
 
 h2 {
-    text-align: center;
-    font-size: 30px;
-    font-family: Helvetica, sans-serif;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 600;
 }
 
 h3 {
-    text-align: center;
-    font-size: 20px;
-    font-family: Helvetica, sans-serif;
-
+  text-align: center;
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
 }
 
 p {
-    font-family: Helvetica, sans-serif;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
 }
 
+.portfolio p {
+  text-align: center;
+}
+
+.special-section {
+  padding-bottom: 0;
+}
 
 .group {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .item {
-    flex: 1;
-
+  flex: 1;
 }
 
 .item-double {
-    flex: 2;
-
+  flex: 2;
 }
 
 .centered {
-    text-align: center;
+  text-align: center;
 }
 
 .padded-image {
-    margin: 5px;
+  margin: 5px;
 }
 
 .border {
-    border: 2px solid#AC73BF;
-    margin: 10px;
-    border-radius: 15px;
+  border: 2px solid#AC73BF;
+  margin: 10px;
+  border-radius: 15px;
 }
 
 div label {
-    margin: 20px;
+  margin: 20px;
+  font-size: 20px;
+  font-family: "Raleway", sans-serif;
 }
 
 button {
-    margin-left: 20px;
+  display: table;
+  margin: 0 auto;
+  font-size: 20px;
+  font-family: "Raleway", sans-serif;
+  background-color: #552d62;
+  color: white;
+  padding: 5px 30px;
+  border-radius: 5px;
 }
 
-div#form item {
-    padding: 0;
-    margin: 0;
+button:hover {
+  background-color: #ac73bf;
+  font-size: 25px;
 }
 
-input {
-    margin-left: 16px;
+form {
+  display: table;
+  margin: 0 auto;
 }
-
-
 
 .center {
-    padding-top: 30px;
-    margin-left: 45%;
-    margin-bottom: 20px;
-    color: #552D62;
+
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5px;
+  color: #552d62;
 }
 
-.bullet {
-    color: #552D62;
+.fa-github:hover,
+.fa-users:hover {
+  color: #ac73bf;
+  font-size: 90px;
+}
 
+.services {
+  text-align: center;
 }
 
 img {
-    border-radius: 10px;
+  border-radius: 10px;
 }
-
-
-/* .center {
-margin: auto;
-text-align: center;
-align-content: center;
-} */
-
-/* div#github {
-border-left: border: 2px solid lightgray;
-
-}
-
-div#linkedin {
-border-right: none;
-border-top: none;
-border-bottom: none;
-} */
-
-
-/* form {
-padding-top: 50px;
-padding-bottom: 50px;
-}
-
-form div {
-padding-left: 75px;
-padding-right: 75px;
-} */
 
 /* Media query for desktop CSS declarations */
 
 @media all and (min-width: 800px) {
-    .group {
-        display: flex;
-        flex-direction: row;
-    }
 
-    section {
-        padding-bottom: 125px;
-        padding-right: 100px;
-        padding-left: 100px;
-    }
+  h1 {
+    font-size: 50px;
+  }
 
-    .border-side {
-        border-left: 2px solid#D7D6D6;
-        margin-left: 30px;
+  nav ul li {
+    font-size: 20px;
+  }
 
-    }
+  .group {
+    display: flex;
+    flex-direction: row;
+  }
 
-}
+  section {
+    padding-bottom: 125px;
+    padding-right: 100px;
+    padding-left: 100px;
+  }
 
-/* form {
+  div.contact p {
+    text-align: center;
+  }
+
+  /* .border-side {
+    border-right: 2px solid#D7D6D6;
+    border-left: 2px solid #D7D6D6;
+    padding-left: 30px;
+    padding-right: 30px; */
+
+
+
+
+
+  /* form {
     border: 2px lightgray solid;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 40px;
     padding-right: 40px;
 } */
+}
